results/scraper/fex/4407
ThunkLibs fail to build with LLVM 20
We've started hitting this in Fedora Rawhide and Fedora Linux 42, which both use LLVM 20, and it doesn't repro in Fedora Linux 41 which uses LLVM 19.

```
/builddir/build/BUILD/fex-emu-2502-build/FEX-FEX-2502/ThunkLibs/Generator/gen.cpp:810:12: error: no matching member function for call to 'createDiagnostics'
  810 |   Compiler.createDiagnostics(DiagConsumer, false);
      |   ~~~~~~~~~^~~~~~~~~~~~~~~~~
/usr/lib64/llvm20/include/clang/Frontend/CompilerInstance.h:687:8: note: candidate function not viable: no known conversion from 'clang::DiagnosticConsumer *' to 'llvm::vfs::FileSystem &' for 1st argument  687 |   void createDiagnostics(llvm::vfs::FileSystem &VFS,   
      |        ^                 ~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/lib64/llvm20/include/clang/Frontend/CompilerInstance.h:710:3: note: candidate function not viable: no known conversion from 'clang::DiagnosticConsumer *' to 'llvm::vfs::FileSystem &' for 1st argument  710 |   createDiagnostics(llvm::vfs::FileSystem &VFS, DiagnosticOptions *Opts,
      |   ^                 ~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
```

This looks possibly related to https://github.com/llvm/llvm-project/commit/df9a14d7bbf1180e4f1474254c9d7ed6bcb4ce55 or something around it (thanks to s0ullight for digging it up).

I've repro'd this with both 2502 and 2503.

Downstream bug: https://bugzilla.redhat.com/show_bug.cgi?id=2351394